added a nameLabel and functionality

--- a/Postcard/Base.lproj/Main.storyboard
+++ b/Postcard/Base.lproj/Main.storyboard
@@ -104,6 +104,15 @@
                                     <action selector="sendMailButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="yE2-bP-fHU"/>
                                 </connections>
                             </button>
+                            <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5qI-kU-L04">
+                                <rect key="frame" x="0.0" y="-21" width="42" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                                <variation key="widthClass=compact" fixedFrame="YES">
+                                    <rect key="frame" x="16" y="198" width="149" height="21"/>
+                                </variation>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <variation key="default">
@@ -113,6 +122,7 @@
                                 <exclude reference="NdD-bB-T5e"/>
                                 <exclude reference="uSF-xk-x9o"/>
                                 <exclude reference="hGJ-aG-WvD"/>
+                                <exclude reference="5qI-kU-L04"/>
                             </mask>
                         </variation>
                         <variation key="widthClass=compact">
@@ -122,6 +132,7 @@
                                 <include reference="NdD-bB-T5e"/>
                                 <include reference="uSF-xk-x9o"/>
                                 <include reference="hGJ-aG-WvD"/>
+                                <include reference="5qI-kU-L04"/>
                             </mask>
                         </variation>
                     </view>
@@ -130,6 +141,7 @@
                         <outlet property="enterNameTextField" destination="JJi-d4-XvE" id="RGA-9x-Gs2"/>
                         <outlet property="mailButton" destination="hGJ-aG-WvD" id="e6l-2W-qRA"/>
                         <outlet property="messageLabel" destination="uSF-xk-x9o" id="B0u-IL-Dcy"/>
+                        <outlet property="nameLabel" destination="5qI-kU-L04" id="5z2-U6-vCg"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
